src/objects/Player__c.object
<CustomObject>
    <fields>
        <fullName>Current_Clan_Member_Session__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Clan Session</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>This Clan session does not belong to this player</errorMessage>
            <filterItems>
                <field>Clan_Member_Session__c.Player__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Clan_Member_Session__c</referenceTo>
        <relationshipLabel>Players</relationshipLabel>
        <relationshipName>Players</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Clan_Games_Points__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Clan Games Points</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Player</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Name__c</columns>
        <columns>Total_Clan_Games_Points__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Player Tag</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Players</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>